Use mcols() instead of elementMetadata().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,4 +55,4 @@ importMethodsFrom(GenomicRanges,seqnames)
 importMethodsFrom(GenomicRanges,start)
 importMethodsFrom(GenomicRanges,strand)
 importMethodsFrom(S4Vectors,Rle)
-importMethodsFrom(S4Vectors,elementMetadata)
+importMethodsFrom(S4Vectors,mcols)
